2004-04-26  ujwal
	
	* Fixed resize bug in VT100Screen.

2004-04-24  ujwal

	* Removed some code in PTToolbarController that triggered a 
	  bug in toolbar visibility toggling.
	* Added support for mapping the help key.

2004-04-20  ujwal

	* Added an option to have middle mouse button paste from clipboard.
	* Added an option to disable bold font rendering in display profile 
	  and config panel.

2004-04-18  fabian

    * Fix for dead key and related issues.
    * Fixes of Japanaese and German translatons.
    
2004-04-18  ujwal

	* Potential fix for dead key and key repeat issue.

2004-04-16  ujwal

	* Honoring anti-aliasing for bold also. We don't use strokewidth for 
	  bold when antialias is off since it looks ugly. Instead, we use 
	  the old method of redrawing the character offset by 1 pixel.
	  
	* Added a screen lock API to VT100Screen.

2004-04-15  ujwal

	* Fixed size of window in setWindowSize when tabs are at bottom.

2004-04-14  fabian

    * Updated website files.
    
2004-04-13  ujwal

	* Updated help pages.
	* Made changes to horizontal character spacing inconfig panel update smoother.

2004-04-11  ujwal
	
	* PTYTask is back to blocking read since we are not doing any 
	  idle processing anymore. This should cut down onthe number 
	  of select calls.

2004-04-11  fabian

    * Check in correct Japanese localization.
    
2004-04-11  ujwal

	* Made config panel a floating window. Changes are applied immediately 
	  to the active session.
	* Added back in support for bookmark shortcuts.

2004-04-10  ujwal

	* Removed obsolete code activating fonts.
	* Migrating name, command, and working directories of old 
	  addressbook to new format. Default profiles will be used.
	* Subclassed NSApplication to override sendEvent: so that 
	  custom key bindings with command key mask would work correctly. 
	  Take care not to define key mappings that override something 
	  important like cmd-q.

2004-04-08  ujwal

	* Updated ProjectBuilder file.
